[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sbn"
description = "Skull, Bones and Number (OTP-CR-117/19)"
version = "30"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
             'Development Status :: 3 - Alpha',
             'License :: Public Domain',
             'Operating System :: Unix',
             'Programming Language :: Python',
             'Topic :: Utilities'
            ]


[project.urls]
"home" = "https://pypi.org/project/sbn"
"bugs" = "https://github.com/bthate/sbn/issues"
"source" = "https://github.com/bthate/sbn"


[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = [
            "sbn",
            "sbn.modules"
           ]
zip-safe = true

[project.scripts]
sbn = "sbn.__main__:wrapped"

[tool.setuptools.data-files]
"share/doc/sbn" = [
          "docs/files/ECHAabilify.png",
          "docs/files/ECHAclozapine.png",
          "docs/files/ECHAhaldol.png",
          "docs/files/ECHAzyprexa.png",
          "docs/files/informed.jpg",
          "docs/files/verbatim2.png",
          "docs/files/skull.jpg",
          "docs/files/skull3.png",
          "docs/files/bevestigd.jpg",
          "docs/files/wallpaper.png",
          "docs/files/kamer.png",
          "docs/files/OTP1.png",
          "docs/files/OTP2.png",
          "docs/files/genocide.jpg"
         ]

"share/doc/sbn/pdf" =  [
               "docs/pdf/bevestigd.pdf",
               "docs/pdf/EM_T04_OTP-CR-117_19.pdf",
               "docs/pdf/EM_T07_OTP-CR-117_19_001.pdf",
               "docs/pdf/Kamer.pdf",
               "docs/pdf/Rome-Statute.pdf"
              ]
